# LevEngine

./: .clang-format  .gitignore  .gitmodules  BUILD_AND_CI_RU.md  CMakeLists.txt  CMakePresets.json  DOCS_NAVIGATION.md  PACKAGE_README.md  README-fetch-thirdparty.md  README.md  cmake-config-output.txt  gen_proj_msvc_ninja.bat  gen_proj_msvc_ninja.ps1  git-status.txt  main.cpp
.PVS-Studio/: depend_info.json
.github/workflows/: README.md  build-and-release.yml  clang-format-checker.yml  linux-build.yml  package-and-verify-debug.yml  package-and-verify.yml  windows-build.yml
App/: CMakeLists.txt
App/Source/: Game.cpp  Game.hpp  TestObject.cpp  TestObject.hpp  Version.h.in  main.cpp  pch.cpp
Automation/: .build_state.json  BUILD_EXAMPLES.md  BUILD_FAQ.md  BUILD_SYSTEM_README.md  CMAKE_TOOLS_README.md  CONFIGURATION_CHEATSHEET.md  CONFIGURATION_DIAGRAM.md  CONFIGURATION_FLOW.md  HOTKEYS_CLION_GUIDE.md  HOTKEYS_QUICK_SETUP.md  QUICK_FIX_CLANG_CL.md  README.md  UNICODE_FIX_SUMMARY.md  automation_new.py  build.bat  build_actions.py  build_config.py  build_menu.bat  build_menu.py  check_hotkeys.bat  clean.bat  clean_cmake_cache.ps1  diagnose_build_environment.ps1  diagnose_hotkeys.bat  run_build_menu.ps1  test_unicode_output.py  user_config.py  user_config.template.py
Automation/CMAKE/: CmakeHelpers.cmake
Automation/CMAKE/Toolchains/: toolchain-clang-cl.cmake  toolchain-mingw.cmake  toolchain-msvc.cmake
Docs/: ENGINE_STATUS.md
Engine/: .clang-format  CMakeLists.txt  EngineConfig.h.template
Engine/Source/Core/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  eng.hpp
Engine/Source/Core/graphics/: Colors.hpp  GraphicsAPI.cpp  GraphicsAPI.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Engine/Source/Core/input/: InputKeys.hpp  InputManager.cpp  InputManager.hpp
Engine/Source/Core/render/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Render.cpp  Render.hpp  RenderQueue.cpp  RenderQueue.hpp  VertexLayout.hpp
Engine/Source/Core/scene/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp
Engine/Source/Core/scene/components/: CameraComponent.cpp  CameraComponent.hpp  MeshComponent.cpp  MeshComponent.hpp
Engine/Source/Input/: InputManager.hpp
build_ci/: CPackConfig.cmake  CPackSourceConfig.cmake  version.txt
build_ci/App/: Version.h
build_ci/_CPack_Packages/win64/ZIP/LevEngine-9.10.11-Windows/share/doc/GLFW/html/: build_guide.html  compat_guide.html  dir_bc8d3263777d75eff5e20469bf7b34da.html  doxygen_crawl.html  group__hat__state.html  input_8md.html  input_guide.html  intro_guide.html  quick_guide.html  struct_g_l_f_wallocator.html  struct_g_l_f_wgammaramp.html
build_ci/_CPack_Packages/win64/ZIP/LevEngine-9.10.11-Windows/share/doc/GLFW/html/search/: pages_1d.js
build_test/: CPackConfig.cmake  CPackSourceConfig.cmake
build_vendor/glew_build/: cmake_uninstall.cmake  glew.pc
cmake/: CPackReleaseConfig.cmake  Dependencies.cmake  ThirdPartyVersions.cmake  Version.h.in  copy_readme.cmake.in  version.txt.in
cmake-ci/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
cmake-ci/install/: README.md
cmake-ci/install/share/doc/GLFW/html/: build_8md.html  compat_guide.html  context_guide.html  doxygen.css  files.html  glfw3native_8h_source.html  group__buttons.html  group__errors.html  group__joysticks.html  group__mods.html  group__native.html  input_guide.html  internals_guide.html  intro_8md.html  monitor_guide.html  moving_guide.html  quick_guide.html  topics.html  vulkan_guide.html  window_8md.html
cmake-ci/install/share/doc/GLFW/html/search/: pages_19.js
cmake-test/: CPackConfig.cmake  CPackSourceConfig.cmake
cmake-test2/: CPackConfig.cmake  CPackSourceConfig.cmake
packaging/: pack.ps1
scripts/: build.bat  build_ninja_vsdev.bat  build_with_vsdev.ps1  check_package.ps1  check_package.sh  clean.bat  cleanup.ps1  cleanup_temp.ps1  create_ci_tag.ps1  fetch_thirdparty.ps1  ide-build.bat  ide-build.ps1  pack_clean.ps1  pack_clean.sh
source/: main.cpp  pch.cpp  pch.h  pch.hpp
staging/share/doc/GLFW/html/: glfw3_8h_source.html  group__keys.html  group__vulkan.html  internal_8md.html  main_8md.html  news.html  vulkan_8md.html  vulkan_guide.html  window_guide.html
